--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     margin: 0 auto;
     max-width: 960px;
 }
@@ -57,3 +57,4 @@ section#weltext p {
     font-size: 24px;
     padding-top: 50px;
 } 
+*/
