--- a/styleflex.css
+++ b/styleflex.css
@@ -1,23 +1,67 @@
 * {
     margin: 0 auto;
-    max-width: 970px;
+    max-width: 1000px;
 }
 
-header {
-    
+#firstpage {
+    background-image:url(firstpage.jpg);
+    width: 100%;
+    height: 854px;
 }
 
 #name {
-    display: flex;
     font-family: 'Open Sans, sans-serif';
-    background-color: yellow;
+    font-size: 40px;
+    font-weight: 900;
+    color: #e8e8ed;
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: row wrap;
+    padding-left: 8%;
+    padding-top: 1%;
+
 }
 
 #navmenu {
+    font-family: 'Open Sans, sans-serif';
+    font-size: 18px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end;
+    margin-right: 0;
+    padding-top: 1%;
+    width: 65%;
+
+}
+
+a:hover{
+    font-weight: 900;
+    color: #e8e8ed; 
+}
+
+
+.welcometext {
+    font-family: 'Open Sans, sans-serif';
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: column wrap;
+    background-color: blue;
+    margin-top: 15%;
+    text-align: center;
+}
+
+
+#contacttext {
+    font-family: 'Open Sans, sans-serif';
+    color: #474140;
     background-color: red;
     display: flex;
-    justify-content: flex-end;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-content:flex-start;
 
-    font-family: 'Open Sans, sans-serif';
+}
     
+#contactheading {
+    font-weight: 800;
 }
