--- a/styleflex.css
+++ b/styleflex.css
@@ -1,67 +1,195 @@
+                                                                
+                                                                /*universal*/
 * {
     margin: 0 auto;
-    max-width: 1000px;
+    max-width: 980px;
+    font-family: 'Playfair Display', serif;
 }
 
-#firstpage {
+.clear{
+    clear:left;
+    height: 50px;
+    background-color: #e5e3e3;
+}
+
+.heading {
+    padding-bottom: 3%;
+}
+
+                                                                /*page1*/
+
+.firstpage {
     background-image:url(firstpage.jpg);
     width: 100%;
     height: 854px;
 }
 
 #name {
-    font-family: 'Open Sans, sans-serif';
     font-size: 40px;
     font-weight: 900;
     color: #e8e8ed;
-    display: flex;
-    justify-content: flex-start;
-    flex-flow: row wrap;
     padding-left: 8%;
-    padding-top: 1%;
-
+    word-spacing: 20px;
+    display: flex;
 }
 
-#navmenu {
-    font-family: 'Open Sans, sans-serif';
+.navmenu {
     font-size: 18px;
+    letter-spacing: 2px;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-end;
+    justify-content: space-around;
     margin-right: 0;
     padding-top: 1%;
     width: 65%;
-
+    text-transform: uppercase;
 }
 
-a:hover{
+a:hover {
     font-weight: 900;
-    color: #e8e8ed; 
 }
 
+a {
+    text-decoration: none;
+    color: #e8e8ed; 
+    font-weight: 400;
+}
 
 .welcometext {
-    font-family: 'Open Sans, sans-serif';
-    display: flex;
-    justify-content: flex-start;
-    flex-flow: column wrap;
-    background-color: blue;
-    margin-top: 15%;
-    text-align: center;
-}
-
-
-#contacttext {
-    font-family: 'Open Sans, sans-serif';
-    color: #474140;
-    background-color: red;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-content:flex-start;
+    margin-top: 10%;
+    margin-left: 1%;
+    width: 39%;
+    text-align: center;
+    color: #e8e8ed;
+    line-height: 200%;
+}
 
+section.welcometext p{
+    padding-top: 5%;
+    font-size: 22px;
+}
+
+h2 {
+    font-size: 32px;
+    font-weight: 900;
+}
+                                                                /*page 2*/
+.aboutmyself {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    letter-spacing: 2px;
+    text-align: center;
+    color: #474140;
+    font-size: 18px;
+    background-color: #e5e3e3;
+    line-height: 170%;
+}
+
+/*---------------------------------*/
+
+#imageblock {
+    display: flex;
+    justify-content: space-between;
+}
+                                                                /*page 3*/
+
+/*---------------------------------*/
+ul {
+    list-style-type: none;
+}
+
+.skillsblock {
+    display: flex;
+    flex-flow: row wrap;
+    line-height: 170%;
+    letter-spacing: 1px;
+    color: #474140;
+    background-color: #e5e3e3;
+}
+
+.skillname {
+    font-size: 22px;
+    text-transform: uppercase;
+    width: 30%;
+    box-sizing: border-box;
+    margin-left: 0;
+    padding-left: 3%;
+}
+
+.skilldescription {
+    font-size: 18px;
+    width: 70%;
+    margin-right: 0;
+    box-sizing: border-box;
+}
+                                                            /*page4*/
+
+/*---------------------------------*/
+
+.contactblock {
+    background-color: #e5e3e3;
+    display: flex;
+    justify-content: center;
+}
+
+.contacttext {
+    color: #474140;
+    letter-spacing: 1px;
+    box-sizing: border-box;
+    padding: 10% 15% 15%;
+    line-height: 170%;
+    font-size: 18px;
+    text-align: center;
+    width: 60%;
+}
+
+.contactform {
+    color: #474140;
+    padding-top: 5%;
+    box-sizing: border-box;
+    letter-spacing: 1px;
+    line-height: 150%;
+    font-size: 18px;
+    text-align: left;
+    width: 40%;
 }
     
-#contactheading {
-    font-weight: 800;
+.contactform p {
+    text-align: center
 }
+
+/*---------------------------------*/
+    
+.footer {
+    height: 110px;
+    background-color: #4f4b4b;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-around;
+}
+
+#navfooter {
+    font-size: 18px;
+    letter-spacing: 2px;
+    word-spacing: 50px;
+    text-transform: uppercase;
+}
+
+#namefooter {
+    color: #e8e8ed;
+    word-spacing: 20px;
+    letter-spacing: 2px;
+    font-size: 25px;
+}
+
+#copyright {
+    font-size: 10px;
+    letter-spacing: normal;
+    word-spacing: normal;
+}
+    
+/*---------------------------------*/
+
+    
