--- a/index.css
+++ b/index.css
@@ -16,6 +16,21 @@
     padding-bottom: 3%;
 }
 
+.video-container .filter {
+    z-index: 100;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+}
+.video-container video {
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+}
+.video-container video.fillWidth {
+    width: 100%;
+}
+
                                                                 /*page1*/
 
 .firstpage {
