--- a/index.css
+++ b/index.css
@@ -1,13 +1,18 @@
-                                                                /*universal*/
+                                                            /*universal*/
 * {
     margin: 0 auto;
     max-width: 980px;
     font-family: 'Open Sans Condensed', sans-serif;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 .clear{
-    clear:left;
     height: 50px;
+    width: 100%;
     background-color: #e5e3e3;
 }
 
@@ -22,7 +27,8 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-color: #464646;
-    height: 750px;
+    height: 100%;
+    width: 100%;
 }
 
 #name {
@@ -43,20 +49,21 @@
     display: flex;
     justify-content: space-around;
     box-sizing: border-box;
-    margin-right: 0;
+    margin-right: 1%;
     padding-top: 3%;
-    width: 40%;
+    width: 45%;
     text-transform: uppercase;
 }
 
-a:hover {
-    font-weight: 900;
+.navmenu a:hover {
+    color: #b56357;
+    transform: scale(1.2);
 }
 
 a {
     text-decoration: none;
     color: #eae3ea;
-    font-weight: 400;
+    font-weight: 500;
 }
 
 .welcometext {
@@ -76,7 +83,7 @@ section.welcometext p{
 }
 
 h2 {
-    font-size: 22px;
+    font-size: 25px;
     font-weight: 900;
 }
                                                                 /*page 2*/
@@ -90,19 +97,22 @@ h2 {
     font-size: 18px;
     background-color: #e5e3e3;
     line-height: 170%;
+    width: 100%;
 }
 
 /*---------------------------------*/
 .image {
     width: 320px; 
     height: 390px;
-    margin: 0;
+    margin: 0 0 0 0;
 }
+
 
 #imageblock {
     display: flex;
     justify-content: space-between;
     background-color: #e5e3e3;
+    width: 100%;
 }
                                                                 /*page 3*/
 
@@ -118,6 +128,7 @@ ul {
     letter-spacing: 1px;
     color: #474140;
     background-color: #e5e3e3;
+    width: 100%;
 }
 
 .skillname {
@@ -134,22 +145,23 @@ ul {
     width: 70%;
     margin-right: 0;
     box-sizing: border-box;
+    line-height: 200%;
 }
                                                             /*page4*/
-
 /*---------------------------------*/
 
 .contactblock {
     background-color: #e5e3e3;
     display: flex;
     justify-content: center;
+    width: 100%;
 }
 
 .contacttext {
     color: #474140;
     letter-spacing: 1px;
     box-sizing: border-box;
-    padding: 10% 15% 15% 5%;
+    padding: 5% 15% 15% 5%;
     line-height: 170%;
     font-size: 18px;
     text-align: center;
@@ -167,8 +179,11 @@ ul {
     width: 40%;
 }
     
-.contactform h4 {
-    text-align: center
+.contactform h3 {
+    text-align: left;
+    font-weight: normal;
+    font-size: 18px;
+
 }
 
 input {
@@ -198,7 +213,8 @@ iframe {
     
 .footer {
     height: 110px;
-    background-color: #a7b3a5;
+    width: 100%;
+    background-color: #474140;
     display: flex;
     flex-flow: column wrap;
     justify-content: space-around;
