--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@
 }
 
 .firstpage {
-    background-image: url(pondering.jpg);
+    background-image: url(images/pondering.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
